--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,106 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>YutsRails</title>
+    <title>Yuts</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">    
   </head>
 
-  <body>
-    <%= yield %>
-  </body>
+   <body>
+      <div class="container-fluid ">
+         <div class="row">
+            <nav id="sidebarMenu" class="bg-white col-md-2 col-lg-1 pt-0 d-md-block sidebar collapse">
+               <div class="position-sticky pt-2">
+                  <div class="text-center justify-content-center">
+                     <img src="./yuts-logo.png" alt="" width="100" height="75">
+                     <h3 class="px-auto logo"><strong><em>YUTS</em></strong></h3>
+                  </div>
+                  <div class="card text-center mt-3">
+                     <div class="card-header py-3">
+                        
+                     </div>
+                     <div class="card-body">
+                        <h5 class="card-title pb-2 border-bottom">Find Guts!</h5>
+                        <p class="card-text mt-3">Ratings are Coursetable ratings</p>
+                        <p class="card-text mt-3">The Gut Index is similar to Rotten Tomatoes</p>
+                        <p class="card-text mt-3">A higher Gut Index is better</p>
+                        <p class="card-text mt-3">All ranks are percentiles</p>
+                        <p class="card-text mt-3">A higher Gut Rank is better</p>
+                        <p class="card-text mt-3">A higher Prof Rank is better</p>
+                        <p class="card-text mt-3">A lower Work Rank is better</p>
+                        <p class="card-text mt-3">Subject Ranks compare classes in the same subject</p>
+                        <p class="card-text mt-3">The table header "#" denotes enrollment</p>
+                     </div>
+                     <div class="card-footer text-muted py-3">
+                        
+                     </div>
+                  </div>
+               </div>
+            </nav>
+            <main class="col-md-11 ms-sm-auto col-lg-11 px-md-4 ">
+               <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                  <h1 class="h2" id="table-title">Fall 2021 Catalog</h1>
+                  <form class="d-flex" id='searchForm' style="width: 70vmin;">
+                     <input id="searchBar" class="form-control me-2" type="search" placeholder="Search the catalog" aria-label="Search" >
+                     <button class="btn btn-outline-primary me-2" type="submit">Search</button>
+                  </form>
+                  <div class="dropdown">
+                     <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                     Change Semester
+                     </button>
+                     <ul id="seasons-btn"class="dropdown-menu dropdown-scroll" aria-labelledby="dropdownMenuButton1">
+                        <!-- dynamic seasons data -->
+                     </ul>
+                  </div>
+               </div>
+               <div id="main-body">
+                  <table class="table table-striped table-sticky table-hover">
+                     <thead>
+                        <tr>
+                           <th scope="col">Code</th>
+                           <th scope="col">Title</th>
+                           <th scope="col">Prof</th>
+                           <th scope="col">Gut Index</th>
+                           <th scope="col">Guttiness</th>
+                           <th scope="col">Gut Rank</th>
+                           <th scope="col">Gut Subject Rank</th>
+                           <th scope="col">Overall Rating</th>
+                           <th scope="col">Prof Rating</th>
+                           <th scope="col">Grading</th>
+                           <th scope="col">Prof Rank</th>
+                           <th scope="col">Prof Subject Rank</th>
+                           <th scope="col">Work Rating</th>
+                           <th scope="col">Workload</th>
+                           <th scope="col">Work Rank</th>
+                           <th scope="col">Work Subject Rank</th>
+                           <th scope="col">#</th>
+                           <th scope="col">Skills/Areas</th>
+                        </tr>
+                     </thead>
+                     <tbody id="catalog-body">
+                        <%= yield %>
+                     </tbody>
+                  </table>
+               </div>
+            </main>
+         </div>
+      </div>
+      <script src="./src/season.js"></script>
+      <script src="./src/table.js"></script>
+      <script src="./src/search.js"></script>
+      <script src="./src/course.js"></script>
+      <script src="./src/comment.js"></script>
+      <script src="./src/vote.js"></script>
+      <script src="./src/event_listeners.js"></script>
+      <script src="./src/index.js"></script>
+      <!-- JavaScript Bundle with Popper -->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+   </body>
+</html>
 </html>
