--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-   
+   <%= favicon_link_tag asset_path('favicon.png') %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -19,7 +19,7 @@
             <nav id="sidebarMenu" class="bg-white col-md-2 col-lg-1 pt-0 d-md-block sidebar collapse">
                <div class="position-sticky pt-2">
                   <div class="text-center justify-content-center">
-                     <img src="./yuts-logo.png" alt="" width="100" height="75">
+                     <%= image_tag('/images/yuts-logo.png', :size => "100x75")%>
                      <h3 class="px-auto logo"><strong><em>YUTS</em></strong></h3>
                   </div>
                   <div class="card text-center mt-3">
@@ -92,14 +92,6 @@
             </main>
          </div>
       </div>
-      <script src="./src/season.js"></script>
-      <script src="./src/table.js"></script>
-      <script src="./src/search.js"></script>
-      <script src="./src/course.js"></script>
-      <script src="./src/comment.js"></script>
-      <script src="./src/vote.js"></script>
-      <script src="./src/event_listeners.js"></script>
-      <script src="./src/index.js"></script>
       <!-- JavaScript Bundle with Popper -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
    </body>
