--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,7 +62,7 @@
                </div>
                <div id="main-body">
                   <table class="table table-striped table-sticky table-hover">
-                     <thead>
+                     <thead id="table-head">
                         <tr>
                            <th scope="col">Code</th>
                            <th scope="col">Title</th>
