added semester drop down

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -134,7 +134,7 @@
     <div class="px-0 my-0 col-md-7 justify-content-center">
         <div class="m-auto pt-4 pb-1 justify-content-end row">
             <div class="px-0 me-3 text-center col-10" style="flex: 0 0 auto;">
-                <h5><%= @course.season_to_str(@course.season_code) + " Stats" %></h5>
+                <h5><%= Course.season_to_str(@course.season_code) + " Stats" %></h5>
                 <hr>
             </div>
         </div>
