--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -29,6 +29,7 @@
     const OFFSET = 150
     const body = document.querySelector('div#main-body')
     const table = document.querySelector('table.table')
+    const seasons_dropdown = document.querySelector('ul#seasons-btn')
 
     body.addEventListener('click', event => {
         
@@ -36,6 +37,14 @@
             const tr = event.target.closest('tr.course')
 
             window.location.replace(`http://127.0.0.1:3000/courses/${tr.id}`)
+        }
+    })
+
+    seasons_dropdown.addEventListener('click', event => {
+        if (event.target.matches('li.season')) {
+            const season = parseInt(event.target.dataset.id)
+        
+            window.location.replace(`http://127.0.0.1:3000/courses/${season}/new_season_home`)
         }
     })
 
