--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
             </nav>
             <main class="col-md-11 ms-sm-auto col-lg-11 px-md-4 ">
                <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                  <h1 class="h2" id="table-title">Fall 2021 Catalog</h1>
+                  <h1 class="h2" id="table-title" data-id="202103">Fall 2021 Catalog</h1>
                   <form class="d-flex" id='searchForm' style="width: 70vmin;">
                      <input id="searchBar" class="form-control me-2" type="search" placeholder="Search the catalog" aria-label="Search" >
                      <button class="btn btn-outline-primary me-2" type="submit">Search</button>
@@ -61,7 +61,7 @@
                         <!-- dynamic seasons data -->
                       <% Course.getSeasons.each do |season| %>
 
-                        <li class="season dropdown-item"><%= Course.season_to_str(season) %></li>
+                        <li class="season dropdown-item" data-id=<%= season %>><%= Course.season_to_str(season) %></li>
                       <% end %>
                      </ul>
                   </div>
