--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -28,7 +28,7 @@
 <script>
     const OFFSET = 150
     const body = document.querySelector('div#main-body')
-    const table = document.querySelector('table.table')
+    const table = document.querySelector('tbody#catalog-body')
     const seasons_dropdown = document.querySelector('ul#seasons-btn')
 
     body.addEventListener('click', event => {
