--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -254,9 +254,68 @@ function loadMoreCourses(season) {
     fetch(`http://127.0.0.1:3000/courses/${season}/${OFFSET}/load_more`)
     .then(r => r.json())
     .then(courses => {
+
         courses.forEach(createOneCourse)
+        document.querySelector('tr#spinner-container').remove()
+
     })
 }
+
+const lastTableEle = document.querySelector('tbody#catalog-body').lastElementChild
+
+console.log(lastTableEle)
+
+let firstView = true
+
+var observer = new IntersectionObserver(function(entries) {
+	if((entries[0].isIntersecting === true) && firstView) {
+		console.log('Element is fully visible in screen');
+
+        const spinnerContainer = document.createElement('tr')
+
+        spinnerContainer.id = "spinner-container"
+        spinnerContainer.innerHTML = `
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td class="mt-3">          
+            <div class="spinner-border" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+
+        `
+
+
+
+
+        table.append(spinnerContainer)
+        loadMoreCourses("202103")
+        firstView = false
+
+        
+    }
     
-loadMoreCourses("202103")
+}, { threshold: [1] });
+
+const trArr = document.querySelectorAll('tbody#catalog-body tr')
+
+
+
+observer.observe(trArr[trArr.length-1].querySelector('td'));
+    
 </script>
