--- a/app/views/courses/new_season_home.html.erb
+++ b/app/views/courses/new_season_home.html.erb
@@ -263,8 +263,63 @@
         .then(r => r.json())
         .then(courses => {
             courses.forEach(createOneCourse)
+            document.querySelector('tr#spinner-container').remove()
+
         })
     }
         
-    loadMoreCourses("<%= params[:season] %>")
+    
+
+    let firstView = true
+
+var observer = new IntersectionObserver(function(entries) {
+	if((entries[0].isIntersecting === true) && firstView) {
+		console.log('Element is fully visible in screen');
+
+        const spinnerContainer = document.createElement('tr')
+
+        spinnerContainer.id = "spinner-container"
+        spinnerContainer.innerHTML = `
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td class="mt-3">          
+            <div class="spinner-border" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+
+        `
+
+
+
+
+        table.append(spinnerContainer)
+        loadMoreCourses("<%= params[:season] %>")
+        firstView = false
+
+        
+    }
+    
+}, { threshold: [1] });
+
+const trArr = document.querySelectorAll('tbody#catalog-body tr')
+
+
+
+observer.observe(trArr[trArr.length-1].querySelector('td'));
 </script>
