--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,8 +31,18 @@
                      <div class="card-body">
                         <h5 class="card-title pb-2 border-bottom">Find Guts!</h5>
                         <form class="form-check form-switch" action="/courses" method="GET">
-                           <input class="form-check-input" name="filter" type="checkbox" onChange="this.form.submit()" id="flexSwitchCheckDefault">
-                           <label class="form-check-label" for="flexSwitchCheckDefault">Default switch checkbox input</label>
+                           <div class="form-check form-switch">
+                              <input name="guts_switch" class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                           </div>
+                           <div class="btn-group dropend">
+                              <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                 Dropright
+                              </button>
+                              <ul class="dropdown-menu">
+                                 <!-- Dropdown menu links -->
+                              </ul>
+                           </div>
+                           <button type="submit" class="btn btn-primary">Submit</button>
                         </form>
                         <p class="card-text mt-3">Ratings are Coursetable ratings</p>
                         <p class="card-text mt-3">The Gut Index is similar to Rotten Tomatoes</p>
