--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,7 +63,7 @@
             <main class="col-md-11 ms-sm-auto col-lg-11 px-md-4 ">
                <div id="title-container" class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                   <h1 class="h2" id="table-title" data-id="202103">Fall 2021 Catalog</h1>
-                  <form class="d-flex" id='searchForm' action="/courses" method="GET" style="width: 70vmin;">
+                  <form class="d-flex" id='searchForm' style="width: 70vmin;">
                      <input id="searchBar" name="search" class="form-control me-2" type="search" placeholder="Search the catalog" aria-label="Search" >
                      <button class="btn btn-outline-primary me-2" type="submit">Search</button>
                   </form>
