--- a/app/views/courses/new_season_home.html.erb
+++ b/app/views/courses/new_season_home.html.erb
@@ -1,5 +1,5 @@
 <% @courses.each do |course| %>
-    <tr class="course" id=<%= course.id %>>
+    <tr class="course" data-id=<%= course.id %>>
         <td><%= course.course_code %></td>
         <td><%= course.title %></td>
         <td><%= course.checkIfBlank("professor_names", true)%></td>
@@ -46,7 +46,7 @@
         if (event.target.matches('tr.course td')) {
             const tr = event.target.closest('tr.course')
 
-            window.location.replace(`http://127.0.0.1:3000/courses/${tr.id}`)
+            window.location.replace(`http://127.0.0.1:3000/courses/${tr.dataset.id}`)
         }
     })
 
@@ -319,9 +319,100 @@ var observer = new IntersectionObserver(function(entries) {
     
 }, { threshold: [1] });
 
-const trArr = document.querySelectorAll('tbody#catalog-body tr')
+let trArr = document.querySelectorAll('tbody#catalog-body tr')
 
 
 
-observer.observe(trArr[trArr.length-1].querySelector('td'));
+
+function startObserve() {
+    observer.unobserve(trArr[trArr.length-1].querySelector('td'))
+    trArr = document.querySelectorAll('tbody#catalog-body tr')
+    firstView = true
+    if (document.querySelector('input#searchBar').value === "") {
+    console.log('<%= params[:search_val]%>')
+
+        observer.observe(trArr[trArr.length-1].querySelector('td'));
+    }
+}
+
+
+function loadCourses(season, value) {
+    fetch(`http://127.0.0.1:3000/courses/search/${season}/${value}`)
+    .then(r => r.json())
+    .then(courses => {
+
+        courses.forEach(createOneCourse)
+        // restart the observation after new data loaded
+        startObserve()
+
+
+        seasons_dropdown.addEventListener('click', event => {
+            if (event.target.matches('li.season')) {
+                const season = parseInt(event.target.dataset.id)
+            
+                window.location.replace(`http://127.0.0.1:3000/courses/${season}/new_season_home`)
+            }
+        })
+
+    })
+}
+
+function filterGut() {
+    
+    const searchBar = document.querySelector('input#searchBar')
+    const filter = searchBar.value.toUpperCase()
+    const rows = document.querySelectorAll("tbody#catalog-body tr.course")
+
+    // iterate thru each table row, if the row has a search term in a td
+    // show it, else make its style hidden
+    for (let i = 0; i < rows.length; i++) {
+        // const codeEle = rows[i].getElementsByTagName("td")[0]
+        // const titleEle = rows[i].getElementsByTagName("td")[1]
+        // const profEle = rows[i].getElementsByTagName("td")[2]
+
+        const guttinessEle = rows[i].getElementsByTagName("td")[4]
+
+        // const txtValueCode = codeEle.textContent || codeEle.innerText
+        // const txtValueTitle= titleEle.textContent || titleEle.innerText
+        // const txtValueProf = profEle.textContent || profEle.innerText
+
+        const txtValueGuttiness = guttinessEle.textContent || guttinessEle.innerText
+
+        if (txtValueGuttiness === "Gut") {
+            rows[i].style.display = ""
+        } else {
+            rows[i].style.display = "none"
+        }
+    } 
+}
+
+
+// observe on page load 
+startObserve()
+
+// ADD EVENT SEARCH LISTENER
+
+const searchBar = document.querySelector('form#searchForm')
+
+searchBar.addEventListener('submit', event => {
+    event.preventDefault()
+
+    table.innerHTML = ""
+    const searchInput = document.querySelector('input#searchBar')
+    const title = document.querySelector('h1#table-title')
+
+    const season = title.dataset.id
+    loadCourses(season, searchInput.value)
+})
+
+const gutSwitch = document.querySelector('div.form-switch')
+
+gutSwitch.addEventListener('click', event => {
+    filterGut()
+    startObserve()
+
+})
+
+
+
 </script>
