--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
                               <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                                  Sort By 
                               </button>
-                              <ul class="dropdown-menu">
+                              <ul class="dropdown-menu sort-list">
                                  <!-- Dropdown menu links -->
                                  <li class="dropdown-item">Course Code</li>
                                  <li class="dropdown-item">Gut Index</li>
