--- a/app/views/courses/new_season_home.html.erb
+++ b/app/views/courses/new_season_home.html.erb
@@ -94,7 +94,7 @@
         }
 
         // create the rest of the eles w/ artisianal method
-        createTableEle(course, "average_rating_same_professors", tr)
+        createTableEle(course, "average_rating", tr)
         createTableEle(course, "average_professor", tr)
         createTableEleClassed(classifyProf(course), tr)
         createTableEle(course, "professor_percentile", tr, true)
